--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fundo de Pensão</title>
-  <link rel="stylesheet" href="../style/artigos.css">
+  <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
 
   <style>
@@ -23,17 +23,26 @@
 </head>
 <body>
   <header>
-    <h1>Fundo de Pensão</h1>
-    <nav>
-      <a href="/">Pagina Inicial</a>
-      <a href="/artigos/">Artigos</a>
-      <a href="/sobre">Sobre o Site</a>
-    </nav>
   </header>
 
     <main>
-      <h1>Dolar hoje | Fonte Banco Central do Brasil</h1>
-      <p id="preco-dolar-hoje">carregando...</p>
+
+
+      <h1 class="dolar-titulo">Dolar Hoje<img src="img/dolar-hoje-transparente.png" alt="dolar-hoje" class="dolar-icone"></h1>
+
+      <p id="preco-dolar-hoje">Dolar Hoje</p>
+
+
+
+<footer>
+  <p class="fonte">
+    Fonte:
+    <a href="https://www.bcb.gov.br" target="_blank" rel="noopener noreferrer">
+      Banco Central do Brasil
+    </a>
+  </p>
+</footer>
+
     </main>
 
 
