--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fundo de Pensão</title>
+  <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
 
