--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fundo de Pensão</title>
   <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/style.css?v=1.0">
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
 
   <style>
@@ -47,7 +47,7 @@
     </main>
 
 
-    <script src="/json/api-dolar-hoje.js"></script>
+    <script src="/json/api-dolar-hoje.js?v=1.0"></script>
 
 </body>
 </html>
