--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fundo de Pensão</title>
-  <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="icon/favicon.ico?v=1.0" type="image/x-icon">
   <link rel="stylesheet" href="style/style.css?v=1.0">
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
 
