--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fundo de Pensão</title>
+   <meta name="description" content="Confira a cotação do dólar hoje em tempo real, fonte do Banco Central do Brasil e histórico atualizado. Acompanhe USD/BRL facilmente.">
+  <title>Dolar hoje | Cotação do Dólar Hoje – Atualizado em Tempo Real</title>
   <link rel="shortcut icon" href="icon/favicon.ico?v=1.0" type="image/x-icon">
   <link rel="stylesheet" href="style/style.css?v=1.1">
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
